fix swagger docs
